--- a/components/cb-menu/template.html
+++ b/components/cb-menu/template.html
@@ -1,9 +1,9 @@
 <style>
     ${require('./style.scss')}
 </style>
-<div id="cb-bread" class="cb-btn cb-bread">
-    <span></span>
-    <span></span>
+<div id="cb-sandwich" class="cb-btn cb-sandwich">
+    <span class="cb-bread"></span>
+    <span class="cb-bread"></span>
 </div>
 <div id="cb-menu" class="cb-menu">
     <!-- Default slot -->
