--- a/components/cb-menu/template.html
+++ b/components/cb-menu/template.html
@@ -5,7 +5,7 @@
     <span class="cb-bread"></span>
     <span class="cb-bread"></span>
 </div>
-<div id="cb-menu" class="cb-menu">
+<div id="cb-menu" class="cb-menu-item-container">
     <!-- Default slot -->
     <slot class="cb-menu-items"></slot>
     <div class="cb-menu-more">
