uploading latest with controlled animation on page load and smooth animation keyframes

--- a/components/cb-menu/template.html
+++ b/components/cb-menu/template.html
@@ -1,7 +1,7 @@
 <style>
     ${require('./style.scss')}
 </style>
-<div id="cb-sandwich" class="cb-btn cb-sandwich">
+<div id="cb-sandwich" class="preload cb-btn cb-sandwich">
     <span class="cb-bread"></span>
     <span class="cb-bread"></span>
 </div>
