--- a/components/cb-menu/style.scss
+++ b/components/cb-menu/style.scss
@@ -1,12 +1,27 @@
 :host {
     .cb-menu-item-container {
-        display: none;
+        height: 0;
+
+        & ::slotted(*) {
+            height: 0;
+        }
     }
 }
 
 :host([menu-open]) {
     .cb-menu-item-container {
-        display: flex;
+        height: 100%;
+
+        & ::slotted(*) {
+            height: auto !important;
+            display: block!important;
+            text-align: left!important;
+            padding: 18px 18px 18px 50px!important;
+            width: 100%;
+            position: static;
+            box-sizing: border-box;
+            line-height: 12px!important;
+        }
     }
 }
 
@@ -19,16 +34,17 @@
 }
 
 .cb-sandwich {
+    position: absolute;
     display: inline-block;
     cursor: pointer;
+    z-index: 1000;
 
     .cb-bread {
         display: block;
         width: 28px;
         height: 3px;
-        background-color: #333;
+        background-color: #252525;
         margin: 6px 0;
-        //transition: .4s;
         border-radius: 2px;
 
         -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.4, 0.01, 0.165, 0.99);
@@ -58,16 +74,33 @@
     }
 }
 
+.preload * {
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -ms-animation: none !important;
+    -o-animation: none !important;
+    animation: none !important;
+}
+
 .cb-menu-item-container {
     flex-direction: column;
     position: absolute;
-    margin-left: 50px;
-    margin-top: -23px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
     text-align: center;
-    border-radius: 3px;
     color: #e8e8e8;
 
-    background: #2c3e50; /* For browsers that do not support gradients */
+    -webkit-transition: -webkit-transform 0.68s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    transition: height 0.68s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    transition: height 0.68s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    transition: height 0.68s cubic-bezier(0.4, 0.01, 0.165, 0.99), 
+                -webkit-transform 0.68s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+    
+    background: #7b7b7b;
+
+    //background: #2c3e50; /* For browsers that do not support gradients */
     // background: -webkit-linear-gradient(top left, rgba(41, 128, 185, .6), rgba(44, 62, 80, .6));
     // background: -moz-linear-gradient(top left, rgba(41, 128, 185, .6), rgba(44, 62, 80, .6));
     // background: -o-linear-gradient(top left, rgba(41, 128, 185, .6), rgba(44, 62, 80, .6));
@@ -75,12 +108,9 @@
     // Instead of gradient, do filter blur over background image (https://codepen.io/betravis/pen/ztyDm)
 
     & ::slotted(*) {
-        display: inline-block;
-        //padding: 12px 20px;
-        min-width: 158px;
-        margin: 0 auto;
-        padding: 16px 0;
         cursor: pointer;
+        display: block;
+        overflow: hidden;
     }
 
     & ::slotted(*:hover) {
@@ -92,54 +122,26 @@
     }
 }
 
-//transform: rotate(45deg) translate(7px, 1px);
-// @-webkit-keyframes top-bread {
-//     33%  {transform: rotate(90deg) translate(8px, -5px);}
-//     66% {transform: rotate(90deg) translate(9px, 0px);}
-//     100% {transform: rotate(135deg) translate(4px, -3px);}
-// }
 @keyframes top-bread {
     33%  {transform: rotate(90deg) translate(8px, -5px);}
     66% {transform: rotate(90deg) translate(9px, 0px);}
     100% {transform: rotate(135deg) translate(4px, -3px);}
 }
-
-// @-webkit-keyframes bottom-bread {
-//     33%  {transform: rotate(90deg) translate(-1px, 4px);}
-//     66% {transform: rotate(90deg) translate(0px, 0px);}
-//     100% {transform: rotate(45deg) translate(-3px, -2px);}
-// }
 @keyframes bottom-bread {
     33%  {transform: rotate(90deg) translate(-1px, 4px);}
     66% {transform: rotate(90deg) translate(0px, 0px);}
     100% {transform: rotate(45deg) translate(-3px, -2px);}
 }
 
-
-// @-webkit-keyframes top-bread-reverse {
-//     0% {transform: rotate(135deg) translate(4px, -3px);}
-//     //100% {transform: rotate(180deg) translate(7px, 3px);}
-//     // 66%  {transform: rotate(90deg) translate(8px, -5px);}
-//     // 100% {transform: rotate(90deg) translate(9px, 0px);}
-// }
 @keyframes top-bread-reverse {
     0% {transform: rotate(135deg) translate(4px, -3px);}
     50% {transform: rotate(180deg) translate(0px, -6px);}
-    100% {transform: rotate(180deg) translate(0px, -3px);}
-    //100% {transform: rotate(180deg) translate(7px, 3px);}
-    // 66%  {transform: rotate(90deg) translate(8px, -5px);}
-    // 100% {transform: rotate(90deg) translate(9px, 0px);}
+    100% {transform: rotate(180deg) translate(0px, 0px);}
 }
-
-// @-webkit-keyframes bottom-bread-reverse {
-//     0% {transform: rotate(45deg) translate(-3px, -2px);}
-//     // 66%  {transform: rotate(90deg) translate(-1px, 4px);}
-//     // 100% {transform: rotate(90deg) translate(0px, 0px);}
-// }
 @keyframes bottom-bread-reverse {
     0% {transform: rotate(45deg) translate(-3px, -2px);}
     50% {transform: rotate(180deg) translate(0px, 2px);}
-    100% {transform: rotate(180deg) translate(0px, -2px);}
-    // 66%  {transform: rotate(90deg) translate(-1px, 4px);}
-    // 100% {transform: rotate(90deg) translate(0px, 0px);}
+    100% {transform: rotate(180deg) translate(0px, 0px);}
 }
+
+/* Add webkit etc.. keyframes */
