updating cb-gl and cb-gl-items

--- a/components/cb-gl-item/template.html
+++ b/components/cb-gl-item/template.html
@@ -2,12 +2,12 @@
     ${require('./style.scss')}
 </style>
 <div class="cb-gl-item-container">
-    <div>
+    <div id="cb-gl-item-image">
         <!-- image container -->
     </div>
-    <div>
+    <div id="cb-gl-item-title">
         <!-- title/rating container -->
         <div>Demo title</div>
-        <div>rating</div>
+        <span>rating</span>
     </div>
 </div>
